--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -16,11 +16,16 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  position: fixed;
   padding: 0.3em;
   width: 100%;
   height: 3em;
   background-color: transparent;
+  z-index: 1;
+
+  /*Animation*/
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
 }
 
 .nav-black {
@@ -34,14 +39,33 @@ a {
   cursor: pointer;
 }
 
+.nav__mobile-links {
+  position: absolute;
+  top: 3em;
+  left: 0;
+  background-color: var(--netflix-black-2);
+  height: 40vh;
+  width: 100%;
+
+  transition: 1s;
+}
+
 .nav__links {
   position: absolute;
   left: 10em;
 }
 
+.nav__mobile-links ul {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 1em;
+  padding: 2em;
+}
+
 .nav__links ul {
   display: flex;
-  gap: 2em;
+  gap: 1.5em;
 }
 
 .nav__search {
@@ -58,8 +82,25 @@ a {
   cursor: pointer;
 }
 
+.nav__mobile {
+  position: absolute;
+  right: 1em;
+  cursor: pointer;
+}
+
+.nav__links,
+.nav__avatar {
+  display: none;
+}
+
 @media only screen and (min-width: 600px) {
-  .nav__mobile {
+  .nav__links,
+  .nav__avatar {
+    display: initial;
+  }
+
+  .nav__mobile,
+  .nav__mobile-links {
     display: none;
   }
 }
