--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -18,6 +18,7 @@ button {
   border-radius: 0.3em;
   font-weight: 600;
   cursor: pointer;
+  z-index: 1;
 }
 
 .banner {
@@ -28,6 +29,7 @@ button {
 }
 
 .banner__left-col {
+  position: relative;
   height: 100%;
   width: 750px;
   background: linear-gradient(
